# waveflow

./: .gitignore  .risnet_network.json  .risnet_web_state.json  AGENTS.md  BUG_FIX_REPORT.md  CLAUDE.md  CLI_QUICK_REFERENCE.md  CONNECT_SNR_CLARIFICATION.md  DEBUG_CHECKLIST.md  EXAMPLES_GUIDE.md  FUTURE.md  GETTING_STARTED_CLI.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  PHYSICS_ANALYSIS.md  QUANTIZATION_FIX_SUMMARY.md  QUICKSTART.md  README.md  REVIEW_FIXES.md  RISNET_COMMAND.md  SNR_CALCULATION_VERIFICATION.md  SNR_IN_CONNECT_COMMAND.md  STRUCTURE.md  TESTALL_COMMAND_UPDATE.md  TUTORIAL.md  camera_stream_server.py  connect.txt  index.html  investigate_snr_calculation.py  main-web-v2.py  main-web.py  main.py  plot_beam_pattern.py  pyproject.toml  requirements.txt  risnet  risnet.py  risnet_cli.py  (+21 more)
.claude/: settings.local.json
.github/workflows/: publish.yml
algorithms/: __init__.py  base.py  exhaustive.py  greedy.py  registry.py
app/: __init__.py  state_manager.py  thread_safe_network.py  validators.py
app/api/: __init__.py  bp.py
app/static/: app.js
app/web/: __init__.py  bp.py  templates.py
cli/: __init__.py  ap_shell.py  connection_handler.py  helpers.py  main_shell.py  matlab_commands.py  physics_suite.py  ris_shell.py  test_suite.py  ue_shell.py  video_stream.py
config/: __init__.py  config.py
controller/: __init__.py  adaptive_controller.py  beam_tracker.py  power_controller.py  ris_controller.py  waveform_controller.py
controller/beamforming/: __init__.py  engine.py
controller/beamsweeping/: ALGORITHM_TEMPLATE.md  README.md  __init__.py  adaptive_center_out.py  base.py  beamsweeping.old  beamsweeping.py  common.py  linear_brute_force.py  ml_sweep.py  real_signal_sweep.py  registry.py  template_algorithm.py
controller/beamtracking/: __init__.py
controller/pathfinding/: __init__.py  astar.py  dijkstra.py  engine.py  registry.py
controller/ris_phase/: __init__.py  core_adapter.py  phase_hybrid.py  phase_manager.py  phase_optimization.py  phase_quantization.py  phase_steering.py
core/: __init__.py  adaptive_impairments.py  angle_utils.py  arq_handler.py  environment.py  feedback_channel.py  network.py  nodes.py  phase_engine.py  physics.py  signal_processor.py  snr_messaging.py  ue_receiver.py  validation.py  waveform.py
core/quantization/: README.md  __init__.py  base.py  legacy.py  registry.py  uniform.py
docs/: ARCHITECTURE.md  CLAUDE.md  ML_GUIDED_SWEEP.md  README_OPENCV_SWEEP.md  STRUCTURE.md  connect.txt  snr.txt
examples/: RISNet_Algorithm_Comparison.ipynb  RISNet_Jupyter_Example.ipynb  __init__.py  aruco_marker_generation_example.py  example_1_simple.py  example_2_topology.py  example_3_custom_topology.py  example_4_obstacles.py  example_5_context_manager.py  example_6_batch_testing.py  example_interactive_cli.py  hog_human_detection_example.py  run_all.py
examples/json/: example_1_simple.json  example_2_predefined_topology.json  example_3_custom_topology.json  example_4_obstacles.json  example_5_grid_topology.json  example_6_batch_testing.json  example_7_complex_network.json  example_8_sdr_validation.json  test_all_topologies.sh  topo_44.json
examples/matlab/: example_1_beam_pattern_3d.m  example_3_ris_phase_farfield.m  example_4_ris_phase_farfield_cst_style.m
examples/script/: _bootstrap.py  example_10_waveform_level.py  example_12_feedback_integration.py  example_14_full_integration.py  example_15_video_streaming.py  example_16_quantization_codebook.py  example_17_beam_sweeping_trials.py  example_18_aruco_markers.py  example_19_hog_human_detection.py  example_1_simple.py  example_2_topology.py  example_3_custom_topology.py  example_4_obstacles.py  example_5_context_manager.py  example_6_batch_testing.py  example_8_sdr_validation.py  example_9_interactive_cli.py  example_adaptive_control.py  example_adaptive_system.py  example_full_integration.py  example_isolation_demo.py  example_ml_beam_prior.py  example_option3_feedback_channel.py  example_option3_integrated.py  example_snr_messaging.py
matlab/: __init__.py  bridge.py  integration.py
matlab/scripts/: compute_beam_pattern.m  show_phase_heatmap.m
matlab_integration/: bridge.py  compare_beam_angles.m  converters.py  pattern_sap.m  pattern_sap2.m
matlab_integration/scripts/: __init__.py  compute_array_response.m  compute_beam_pattern.m  plot_farfield_3d.m  plot_ris_geometry.m  sweep_beam_snr.m
risformula/: Compare_Both_Implementations.ipynb  anm.md  formula.md  formula_hybrid.md  localization_de.py  new_risim_v1.html  pattern_gen_3d.py  pattern_gen_def - Copy.py  pattern_gen_def.py  pattern_gen_hybrid.py  pattern_hybrid_sap.py  ris_simulator_hybrid.html  ris_simulator_hybrid.v2.test.html  ris_simulator_hybrid.v2.working.html  ris_simulator_hybrid.v2_0.45.html
risformula/archived/: formula.md  (+5 more)
risnet/: __init__.py  __main__.py  cli.py  scenarios.py  terminal_cli.py
tasks/: test-suite.md  todo.md
tests/: debug_ml.py  debug_ml_detailed.py  evaluate_model_performance.py  test_adaptive_with_ml.py  test_array_primitives.py  test_array_quantization.py  test_auto_discovery.py  test_basar2020_channel_model.py  test_burtakov2023_qris.py  test_connect_characterization.py  test_custom_model.py  test_de_accuracy_loop.py  test_de_localization_sweep.py  test_fixes.py  test_hybrid_mode.py  test_johari2025_physics_regression.py  test_johari2025_ris_5ghz.py  test_lightris_channel.py  test_lightris_theory.py  test_link_budget_channel.py  test_new_model.py  test_physics_core.py  test_physics_fixes.py  test_quantization_improvements.py  test_scenarios.py  test_side_lobes.py  test_simris_channel.py  test_simris_paper_formulas.py  test_simris_physics_regression.py  test_smoke.py  test_sweep_coarse_step.py  test_sweep_with_ml.py  test_toubal2025_beam_tracking.py  test_waveform_level.py  train_custom_dataset.py
tools/: camera_diagnostic.py  check_camera.py
utils/: __init__.py  aruco_utils.py  calibrate_camera.py  cam_oa_marker.py  cam_oa_server.py  csi.py  lightris.py  link_budget.py  metric_selector.py  rssi.py  snr.py
waveflow/: __init__.py  __main__.py  cli.py
(+90 files in other folders)
