[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveflow-sim"
version = "2.0.1"
description = "Waveflow: RIS-assisted wireless network simulator with beam sweeping, OFDM waveform simulation, and ML-guided beam optimization"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
    {name = "Mohd Adil Mokti"},
]
keywords = ["wireless", "waveform", "simulation", "network", "ris", "reconfigurable-intelligent-surface", "beam-sweeping", "ofdm", "snr", "pathfinding", "machine-learning", "5g", "mmwave"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Communications",
]

dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
]

[project.optional-dependencies]
web = [
    "flask",
    "waitress",
]
vision = [
    "opencv-python",
]
optimization = [
    "cvxpy",
    "scs",
]
plot = [
    "matplotlib",
]
terminal = [
    "typer",
    "rich",
]
ml = [
    "torch>=1.9.0",
    "scikit-learn",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "matplotlib",
    "mypy",
]
all = [
    "flask",
    "waitress",
    "opencv-python",
    "cvxpy",
    "scs",
    "typer",
    "rich",
    "torch>=1.9.0",
    "scikit-learn",
    "matplotlib",
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/nqmn/waveflow"
Documentation = "https://github.com/nqmn/waveflow#readme"
Repository = "https://github.com/nqmn/waveflow.git"
Issues = "https://github.com/nqmn/waveflow/issues"

[project.scripts]
waveflow = "waveflow.__main__:main"
risnet = "risnet.__main__:main"

[tool.setuptools.packages.find]
include = [
    "app*",
    "cli*",
    "config*",
    "controller*",
    "core*",
    "risnet*",
    "waveflow*",
    "utils*",
]
exclude = [
    "tests*",
    "examples*",
    "docs*",
]

[tool.setuptools.package-data]
risnet = ["py.typed"]
waveflow = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100
